# neuroflow-model

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CPP_REFACTOR_REPORT.md  DEPLOYMENT.md  DESIGN.md  DESIGN_v4.md  EMAIL_NOTIFICATION.txt  IDEA.md  LICENSE  NEUROFLOW_OPTIMIZATION_PLAN.md  NEUROFLOW_TEST_REPORT.md  OPTIMIZATION.md  README.md  STYLE.md  TRAINING_PLAN_1.5B.md  USERS_GUIDE.md  USER_GUIDE.md  api_train.py  benchmark_gym.py  build.sh  build_vocab.py  char_vocab.json  check_data.py  check_vocab.py  daemon.py  daemon_local.py  daemon_v3.py  daemon_v5.py  daemon_v53_arch.py  daemon_v5_cn.py  demo_evolution.py  demo_multimodal.py  demo_token.py  diagnose_model.py  eval_comprehensive.py  extract_github_knowledge.py  extract_knowledge.py  (+32 more)
api_training_data/: generated_samples.json
assets/: architecture-v53.html
benchmarks/: cartpole-v1_result.json  cartpole_trained_result.json  mountaincar-v0_result.json
bindings/: python_bindings.cpp
configs/: cloud_gpu_config.py  config.json  config_distill.json  config_distill_128k.json  config_distill_small.json  dataset_config.py  default.json  generation_config.json  model_1.5b_config.py  special_tokens_map.json  tokenizer_128k_clean.json  tokenizer_cn_013.json  train_config.yaml
configs/huggingface/: merges.txt  vocab.json
cpp_core/: BOUNDARY_FIX_REPORT.md  CMakeLists.txt  MEMORY_FIX_REPORT.md  README.md  README_MULTIMODAL.md  build.sh  clone_test  combo_test  debug_model_test  forward_step_test  full_forward_test  gemm_detail_test  gemm_trans_test  layernorm_test  linear_detail_test  linear_forward_test  linear_full_test  linear_noavx_test  linear_reshape_test  minimal_test  mla_debug_test  mla_step_test  norm_test  reshape_test  simple_model_test
cpp_core/bindings/: python_bindings.cpp
cpp_core/include/neuroflow/: backprop.hpp  memory.hpp  model.hpp  multimodal.hpp  multimodal_model.hpp  networks.hpp  online_learning.hpp  tensor.hpp
cpp_core/src/: model.cpp  tensor.cpp
cpp_core/tests/: clone_test.cpp  combo_test.cpp  debug_model_test.cpp  forward_step_test.cpp  full_forward_test.cpp  gemm_detail_test.cpp  gemm_noavx_test.cpp  gemm_trans_test.cpp  layernorm_test.cpp  linear_detail_test.cpp  linear_forward_test.cpp  linear_full_test.cpp  linear_reshape_test.cpp  minimal_test.cpp  mla_debug_test.cpp  mla_step_test.cpp  norm_test.cpp  reshape_test.cpp  simple_model_test.cpp  simple_test.cpp  test_backprop.cpp  test_benchmark.cpp  test_edge_cases.cpp  test_memory_leak.cpp  test_model.cpp  test_multimodal.cpp  test_online.cpp  test_tensor.cpp
data/: distill_train_small.txt
examples/: demo_inference.py  quick_start.py
include/neuroflow/: adamw.hpp  backprop.hpp  causal_lm.hpp  cuda_context.hpp  cuda_kernels.hpp  generative.hpp  generative_model.hpp  grad_scaler.hpp  memory.hpp  model.hpp  multimodal.hpp  multimodal_model.hpp  networks.hpp  online_learning.hpp  rms_norm.hpp  rope.hpp  sampling.hpp  scheduler.hpp  swiglu.hpp  tensor.hpp  tensor_ops.hpp  tokenizer.hpp  train_lm.hpp
neuroflow/: __init__.py  api_training.py  cli.py  cognition.py  decoder.py  deepseek_optimizations.py  deepseek_v4_optimizations.py  model.py  model_lite.py  model_optimized.py  model_v2.py  modules.py  modules_v2.py  trainable_head.py  trainer.py
scripts/: auto_learner.py  check_json_format.py  config_generator.py  continue_curriculum.sh  curriculum_train.sh  curriculum_v2.sh  curriculum_v3.sh  debug_parse.py  debug_parse2.py  debug_parse3.py  deploy.sh  deploy_tianchi.sh  direct_train.sh  export_weights.py  extract_prompts.py  gen_distill_data.py  gen_distill_full.py  gen_from_prompts.py  infer_full.py  inference.py  learn_loop.py  lmh2_to_lmh1.py  mix_training_data.py  pad_tokenizer.py  precompute_logits.py  prepare_training_data.py  preprocess_128k.sh  preprocess_all.sh  preprocess_corpus.py  preprocess_distill.py  rebuild_tokenizer.py  run_learner.sh  run_loop.sh  stub_evaluator.py  sync_learn.sh  teacher.py  test_generate  test_generate.cpp  test_nan.cpp  train.py  (+11 more)
src/: adamw.cpp  causal_lm.cpp  cuda_context.cpp  generative_model.cpp  grad_scaler.cpp  infer_v2.cpp  model.cpp  model.cpp.bak  neuroflow_gpu.cpp  rms_norm.cpp  rope.cpp  sampling.cpp  scheduler.cpp  swiglu.cpp  tensor.cpp  tensor_ops.cpp  tokenizer.cpp  train_lm.cpp  train_v2.cpp  weight_io.cpp  weight_io.hpp
src/neuroflow_v4/: __init__.py  config.py  encoder.py  inference.py  model.py  weights.py
tests/: clone_test.cpp  combo_test.cpp  debug_model_test.cpp  forward_step_test.cpp  full_forward_test.cpp  gemm_detail_test.cpp  gemm_noavx_test.cpp  gemm_trans_test.cpp  layernorm_test.cpp  linear_detail_test.cpp  linear_forward_test.cpp  linear_full_test.cpp  linear_reshape_test.cpp  minimal_test.cpp  mla_debug_test.cpp  mla_step_test.cpp  norm_test.cpp  reshape_test.cpp  simple_test.cpp  test_adamw.cpp  test_backprop.cpp  test_edge_cases.cpp  test_framework.hpp  test_generative.cpp  test_gqa.cpp  test_lm_pathway.cpp  test_model.cpp  test_model.py  test_multimodal.cpp  test_neuroflow.py  test_online.cpp  test_optimization.py  test_rms_norm.cpp  test_rope.cpp  test_scheduler.cpp  test_swiglu.cpp  test_tensor.cpp
weights/: README.md
