[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "pybind11>=2.10",
    "cmake>=3.18",
    "ninja; platform_system != 'Windows'",
]
build-backend = "setuptools.build_meta"

[project]
name = "neuroflow"
version = "2.1.0"
description = "Brain-inspired multimodal neural network - 43K params, 0.40ms inference"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "chenzhiwenhphp12-afk", email = "chenzhiwenhphp12@gmail.com"},
]
keywords = ["neural-network", "brain-inspired", "multimodal", "lightweight", "cpp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
train = ["torch>=2.0", "unsloth", "datasets"]
dev = ["pytest", "pytest-benchmark", "black", "ruff"]
all = ["neuroflow[train,dev]"]

[project.urls]
Homepage = "https://github.com/chenzhiwenhphp12-afk/neuroflow-model"
Repository = "https://github.com/chenzhiwenhphp12-afk/neuroflow-model"
Issues = "https://github.com/chenzhiwenhphp12-afk/neuroflow-model/issues"

[tool.setuptools.packages.find]
include = ["neuroflow*"]

[tool.setuptools.package-data]
neuroflow = ["*.pyi", "py.typed"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
