[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroflow"
version = "4.0.0"
description = "Brain-inspired neural network with Gated Memory Bank & Sparse Autoencoder — 3.29M params, pure numpy"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Chen Zhiwen", email = "chenzhiwenhphp12@gmail.com"},
]
keywords = ["neural-network", "memory", "sparse-autoencoder", "brain-inspired", "numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/chenzhiwenhphp12-afk/neuroflow-model"
Repository = "https://github.com/chenzhiwenhphp12-afk/neuroflow-model"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["neuroflow_v4*", "neuroflow*"]

[tool.setuptools.package-data]
neuroflow = ["*.pyi", "py.typed"]
